# stda-sailboat-simulator

./: .gitignore  LICENSE  pyproject.toml
sailboat_sim/: heading_controller.py  run.py  sim_params_config.yaml  simulation.py
src/: heading_controller.py  run.py  sail_angle.py  simulation.py
src/figs/: angles.eps  heading.eps  leeways.eps  speeds.eps  trajectories.eps
